hs_01.03.2025 is completed

--- a/HS/hs_01.03.2025/src/main/resources/application.properties
+++ b/HS/hs_01.03.2025/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=org.hibernate.type.EnumType
 
 logging.level.org.springframework.jdbc=DEBUG
+
+jwt.secret=your-secure-secret-key-here
+jwt.expiration=36000000
