BooksWebApp is completed.

--- a/HS/hs_01.03.2025/src/main/resources/application.properties
+++ b/HS/hs_01.03.2025/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.properties.hibernate.type=org.hibernate.type.EnumType
 logging.level.org.springframework.jdbc=DEBUG
 
 jwt.secret=your-secure-secret-key-here
-jwt.expiration=36000000
+jwt.expiration=36000000v 
